Design and JS changes

--- a/index.html
+++ b/index.html
@@ -20,9 +20,21 @@
         <button id="btn">Get your AP</button>
       </form>
       <div id="output">
-        <h3><span id="nthTerm">The nth Term is:</span></h3>
-        <h3><span id="sumAP">The sum of nth Terms is:</span></h3>
-        <h3><span id="AP">The Arithmetic Progression is:</span></h3>
+        <h3>
+          The <span id="term1">nth</span> Term is:<span
+            id="nthTerm"
+            class="Output"
+          ></span>
+        </h3>
+        <h3>
+          The sum of <span id="term2">nth</span> Terms is:<span
+            id="sumAP"
+            class="Output"
+          ></span>
+        </h3>
+        <h3>
+          The Arithmetic Progression is:<span id="AP" class="Output"></span>
+        </h3>
       </div>
     </div>
     <script src="script.js"></script>
